<resources>
    <string name="app_name">MangApp</string>
    <string name="welcome">Benvenuto!</string>
    <string name="username">Nome Utente</string>
    <string name="password">Password</string>
    <string name="strnotsignedup">Non sei ancora registrato?</string>
    <string name="login">Login</string>
    <string name="strsignup">Registrati</string>
    <string name="insertcardid">Inserisci Il Tuo Numero Tessera</string>
    <string name="cardid">Numero Tessera</string>
    <string name="go">Prosegui</string>
    <string name="IDNotFound">Non è stato trovato nessun Numero Tessera corrispondente</string>
    <string name="IDAlreadyRegistered">Esiste già un utente registrato con questo Numero Tessera</string>
    <string name="connectionError">Errore di connessione</string>
    <string name="ExampleUsername">Example123</string>
    <string name="usedUsername">Il nome utente scelto è già in uso</string>
    <string name="welcomeBack">Bentornato %1$s!</string>
    <string name="loginFailed">Nome utente o password errati</string>
    <string name="logout">Logout</string>
    <string name="profile">Profilo</string>
    <string name="Home">Home</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="volumeCover">Copertina</string>
    <string name="temp">Temp</string>
    <string name="cover">Cover</string>
    <string name="publisher">Editore:</string>
    <string name="publicationDate">Data di uscita:</string>
    <string name="finalPrice">Prezzo:</string>
    <string name="select">Seleziona</string>
    <string name="userVolumes">Qui verranno mostrati i volumi che ancora non possiedi delle serie che segui!</string>
    <string name="newVolumes">Nuovi Volumi</string>
    <string name="addToCart">Vai al carrello</string>
    <string name="activities">Attività</string>
    <string name="navNewVolumes">Nuove Uscite</string>
    <string name="volumeList">Lista Volumi</string>
    <string name="cart">Carrello</string>
    <string name="settings">Impostazioni</string>
    <string name="quartiereNow">Il quartiere impostato è %1$s</string>
    <string name="ok">Conferma</string>
    <string name="avaibleVolumes">Volumi Disponibili</string>
    <string name="quantita">Rimanenti:</string>
    <string name="buy">Prenota</string>
    <string name="review">Rivedi Volumi</string>
    <string name="empty_cart">Carrello Vuoto</string>
    <string name="dump_cart">Svuota Carrello</string>
    <string name="bought">Articoli Acquistati!</string>
</resources>