<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/Home"
            android:icon="@drawable/home_icon"/>
    </group>

    <item android:title="@string/activities">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_mieiVolumi"
                    android:icon="@drawable/new_volumes_icon"
                    android:title="@string/navNewVolumes"/>

                <item
                    android:id="@+id/nav_listaCompleta"
                    android:icon="@drawable/all_volumes_icon"
                    android:title="@string/volumeList"/>

                <item
                    android:id="@+id/nav_carrello"
                    android:icon="@drawable/nav_cart_icon"
                    android:title="@string/cart"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/profile">
        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/nav_settings_icon"
                    android:title="@string/settings"/>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


</menu>